content/_generated-doc/3.2/config/quarkus-mongodb-config-group-credential-config.adoc

:summaryTableId: quarkus-mongodb-config-group-credential-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-mongodb-config-group-credential-config_configuration]]link:#quarkus-mongodb-config-group-credential-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-mongodb-config-group-credential-config_quarkus-mongodb-credentials-username]]`link:#quarkus-mongodb-config-group-credential-config_quarkus-mongodb-credentials-username[quarkus.mongodb.credentials.username]`


[.description]
--
Configures the username.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_CREDENTIALS_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_CREDENTIALS_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-credential-config_quarkus-mongodb-credentials-password]]`link:#quarkus-mongodb-config-group-credential-config_quarkus-mongodb-credentials-password[quarkus.mongodb.credentials.password]`


[.description]
--
Configures the password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_CREDENTIALS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_CREDENTIALS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-credential-config_quarkus-mongodb-credentials-auth-mechanism]]`link:#quarkus-mongodb-config-group-credential-config_quarkus-mongodb-credentials-auth-mechanism[quarkus.mongodb.credentials.auth-mechanism]`


[.description]
--
Configures the authentication mechanism to use if a credential was supplied. The default is unspecified, in which case the client will pick the most secure mechanism available based on the sever version. For the GSSAPI and MONGODB-X509 mechanisms, no password is accepted, only the username. Supported values: null or `GSSAPI++\|++PLAIN++\|++MONGODB-X509++\|++SCRAM_SHA_1++\|++SCRAM_SHA_256++\|++MONGODB_AWS`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_CREDENTIALS_AUTH_MECHANISM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_CREDENTIALS_AUTH_MECHANISM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-credential-config_quarkus-mongodb-credentials-auth-source]]`link:#quarkus-mongodb-config-group-credential-config_quarkus-mongodb-credentials-auth-source[quarkus.mongodb.credentials.auth-source]`


[.description]
--
Configures the source of the authentication credentials. This is typically the database where the credentials have been created. The value defaults to the database specified in the path portion of the connection string or in the 'database' configuration property. If the database is specified in neither place, the default value is `admin`. This option is only respected when using the MONGO-CR mechanism (the default).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_CREDENTIALS_AUTH_SOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_CREDENTIALS_AUTH_SOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-credential-config_quarkus-mongodb-credentials-credentials-provider]]`link:#quarkus-mongodb-config-group-credential-config_quarkus-mongodb-credentials-credentials-provider[quarkus.mongodb.credentials.credentials-provider]`


[.description]
--
The credentials provider name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_CREDENTIALS_CREDENTIALS_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_CREDENTIALS_CREDENTIALS_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-credential-config_quarkus-mongodb-credentials-credentials-provider-name]]`link:#quarkus-mongodb-config-group-credential-config_quarkus-mongodb-credentials-credentials-provider-name[quarkus.mongodb.credentials.credentials-provider-name]`


[.description]
--
The credentials provider bean name.

This is a bean name (as in `@Named`) of a bean that implements `CredentialsProvider`. It is used to select the credentials provider bean when multiple exist. This is unnecessary when there is only one credentials provider available.

For Vault, the credentials provider bean name is `vault-credentials-provider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_CREDENTIALS_CREDENTIALS_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_CREDENTIALS_CREDENTIALS_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-credential-config_quarkus-mongodb-credentials-auth-mechanism-properties-auth-mechanism-properties]]`link:#quarkus-mongodb-config-group-credential-config_quarkus-mongodb-credentials-auth-mechanism-properties-auth-mechanism-properties[quarkus.mongodb.credentials.auth-mechanism-properties]`


[.description]
--
Allows passing authentication mechanism properties.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_CREDENTIALS_AUTH_MECHANISM_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_CREDENTIALS_AUTH_MECHANISM_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-mongodb-config-group-credential-config_quarkus-mongodb-mongo-client-configs-credentials-username]]`link:#quarkus-mongodb-config-group-credential-config_quarkus-mongodb-mongo-client-configs-credentials-username[quarkus.mongodb."mongo-client-configs".credentials.username]`


[.description]
--
Configures the username.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-credential-config_quarkus-mongodb-mongo-client-configs-credentials-password]]`link:#quarkus-mongodb-config-group-credential-config_quarkus-mongodb-mongo-client-configs-credentials-password[quarkus.mongodb."mongo-client-configs".credentials.password]`


[.description]
--
Configures the password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-credential-config_quarkus-mongodb-mongo-client-configs-credentials-auth-mechanism]]`link:#quarkus-mongodb-config-group-credential-config_quarkus-mongodb-mongo-client-configs-credentials-auth-mechanism[quarkus.mongodb."mongo-client-configs".credentials.auth-mechanism]`


[.description]
--
Configures the authentication mechanism to use if a credential was supplied. The default is unspecified, in which case the client will pick the most secure mechanism available based on the sever version. For the GSSAPI and MONGODB-X509 mechanisms, no password is accepted, only the username. Supported values: null or `GSSAPI++\|++PLAIN++\|++MONGODB-X509++\|++SCRAM_SHA_1++\|++SCRAM_SHA_256++\|++MONGODB_AWS`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_MECHANISM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_MECHANISM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-credential-config_quarkus-mongodb-mongo-client-configs-credentials-auth-source]]`link:#quarkus-mongodb-config-group-credential-config_quarkus-mongodb-mongo-client-configs-credentials-auth-source[quarkus.mongodb."mongo-client-configs".credentials.auth-source]`


[.description]
--
Configures the source of the authentication credentials. This is typically the database where the credentials have been created. The value defaults to the database specified in the path portion of the connection string or in the 'database' configuration property. If the database is specified in neither place, the default value is `admin`. This option is only respected when using the MONGO-CR mechanism (the default).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_SOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_SOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-credential-config_quarkus-mongodb-mongo-client-configs-credentials-auth-mechanism-properties-auth-mechanism-properties]]`link:#quarkus-mongodb-config-group-credential-config_quarkus-mongodb-mongo-client-configs-credentials-auth-mechanism-properties-auth-mechanism-properties[quarkus.mongodb."mongo-client-configs".credentials.auth-mechanism-properties]`


[.description]
--
Allows passing authentication mechanism properties.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_MECHANISM_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_AUTH_MECHANISM_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-mongodb-config-group-credential-config_quarkus-mongodb-mongo-client-configs-credentials-credentials-provider]]`link:#quarkus-mongodb-config-group-credential-config_quarkus-mongodb-mongo-client-configs-credentials-credentials-provider[quarkus.mongodb."mongo-client-configs".credentials.credentials-provider]`


[.description]
--
The credentials provider name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_CREDENTIALS_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_CREDENTIALS_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-credential-config_quarkus-mongodb-mongo-client-configs-credentials-credentials-provider-name]]`link:#quarkus-mongodb-config-group-credential-config_quarkus-mongodb-mongo-client-configs-credentials-credentials-provider-name[quarkus.mongodb."mongo-client-configs".credentials.credentials-provider-name]`


[.description]
--
The credentials provider bean name.

This is a bean name (as in `@Named`) of a bean that implements `CredentialsProvider`. It is used to select the credentials provider bean when multiple exist. This is unnecessary when there is only one credentials provider available.

For Vault, the credentials provider bean name is `vault-credentials-provider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_CREDENTIALS_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__CREDENTIALS_CREDENTIALS_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===